# cypher

./: APIs.md  README.md  The schedule.md  complete_features.md  database.md  datebase  tokenomics.md  updated business model.md
backend/laravel/: composer.json  package-lock.json  package.json  webpack.mix.js
backend/laravel/app/: helpers.php
backend/laravel/app/Console/: Kernel.php
backend/laravel/app/Exceptions/: Handler.php
backend/laravel/app/Jobs/: SendUserNotification.php
backend/laravel/app/Models/: Admin.php  Article.php  ArticleShare.php  ArticleUserPaid.php  BlockUser.php  BondingCurve.php  Follow.php  TotalUserInvestment.php  User.php  UserInvestment.php  UserNotification.php  UserProfileInvestment.php
backend/laravel/app/Traits/: GeneralTrait.php
backend/laravel/config/: app.php  auth.php  javascript.php  translatable.php  website.php
backend/laravel/public/: mix-manifest.json
backend/laravel/routes/: api.php  auth.php  web.php
backend/services/: .gitignore  Cargo.toml  sql.md
backend/services/src/: README.md  error.rs  main.rs  test.http  tokendb.rs
frontend/: design.md  homepage.md
frontend/website/: HOW-TO-TEST.md  README.md  article.html  index.html  index.php  package-lock.json  package.json  vite.config.js
frontend/website/css/: styles.css  styles.css.map
frontend/website/sass/: styles.scss
frontend/website/src/: App.vue  HTTP.js  global-methods.js  global-vars.js  main.js  mixin.js  quill-align-images.js
website/css/: styles.css.map
website/sass/partials/: _base.scss  _footer.scss  _header.scss  _include-media.scss
(+139 files in other folders)
