[package]
name = "cypher"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
chrono = "0.4.19"
axum = "0.5.3" # Web framework that focuses on ergonomics and modularity.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum_static_macro = "1"
tower-http = { version = "0.2.0", features = ["cors", "fs", "trace"] }
tokio = { version = "1.17.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
serde = { version = "1.0.136", features = ["derive"] } # A serialization/deserialization framework.
serde_json = "1.0.79" # Serde serializion/deserialization of JSON data.
once_cell = "1.10.0" # Single assignment cells and lazy values.
base64 = "0.13" # Encode and decode base64 as bytes or utf8.
http = "0.2.6" # Types for HTTP requests and responses.
gluesql = { version = "0.10.2", features = ["sled-storage", "metadata", "transaction", "index"]}
log = "0.4.8"
env_logger = "0.7.1"
prost = "0.6.1"
serde_derive = "1.0"
bincode = "1.2.1"
sha2 = "0.9.8"
comfy-table = "4"
futures = "0.3"
hex = "0.4.2"
itertools = "0.10.0"
thiserror = "1.0"
anyhow ="1.0.57"
[build-dependencies]
prost-build = "0.6"

[dev-dependencies]
tempfile = "3.3.0"
